--- a/Dockerfile.armv5te-unknown-linux-musleabi
+++ b/Dockerfile.armv5te-unknown-linux-musleabi
@@ -50,4 +50,6 @@ ENV CARGO_TARGET_ARMV5TE_UNKNOWN_LINUX_MUSLEABI_LINKER="$CROSS_TOOLCHAIN_PREFIX"
     CROSS_CMAKE_OBJECT_FLAGS="-ffunction-sections -fdata-sections -fPIC -march=armv5te -marm -mfloat-abi=soft" \
     CROSS_BUILTINS_PATCHED_MINOR_VERSION=65
 
+ENV CARGO_TARGET_ARMV5TE_UNKNOWN_LINUX_MUSLEABI_RUSTFLAGS="-C link-args=/usr/local/arm-linux-musleabi/lib/libc.a $CARGO_TARGET_ARMV5TE_UNKNOWN_LINUX_MUSLEABI_RUSTFLAGS"
+
 RUN sed -e "s#@DEFAULT_QEMU_LD_PREFIX@#$QEMU_LD_PREFIX#g" -i /qemu-runner
