--- a/Dockerfile.mips64-unknown-linux-muslabi64
+++ b/Dockerfile.mips64-unknown-linux-muslabi64
@@ -58,4 +58,6 @@ ENV CARGO_TARGET_MIPS64_UNKNOWN_LINUX_MUSLABI64_LINKER="$CROSS_TOOLCHAIN_PREFIX"
     CROSS_CMAKE_OBJECT_FLAGS="-ffunction-sections -fdata-sections -fPIC" \
     CROSS_BUILTINS_PATCHED_MINOR_VERSION=65
 
+ENV CARGO_TARGET_MIPS64_UNKNOWN_LINUX_MUSLABI64_RUSTFLAGS="-C link-args=/usr/local/mips64-linux-musl/lib/libc.a $CARGO_TARGET_MIPS64_UNKNOWN_LINUX_MUSLABI64_RUSTFLAGS"
+
 RUN sed -e "s#@DEFAULT_QEMU_LD_PREFIX@#$QEMU_LD_PREFIX#g" -i /qemu-runner
