--- a/Dockerfile.mipsel-unknown-linux-musl
+++ b/Dockerfile.mipsel-unknown-linux-musl
@@ -52,4 +52,6 @@ ENV CARGO_TARGET_MIPSEL_UNKNOWN_LINUX_MUSL_LINKER="$CROSS_TOOLCHAIN_PREFIX"gcc \
     CROSS_CMAKE_CRT=musl \
     CROSS_CMAKE_OBJECT_FLAGS="-ffunction-sections -fdata-sections -fPIC"
 
+ENV CARGO_TARGET_MIPSEL_UNKNOWN_LINUX_MUSL_RUSTFLAGS="-C link-args=/usr/local/mipsel-linux-muslsf/lib/libc.a $CARGO_TARGET_MIPSEL_UNKNOWN_LINUX_MUSL_RUSTFLAGS"
+
 RUN sed -e "s#@DEFAULT_QEMU_LD_PREFIX@#$QEMU_LD_PREFIX#g" -i /qemu-runner
