--- a/Dockerfile.aarch64-unknown-linux-musl
+++ b/Dockerfile.aarch64-unknown-linux-musl
@@ -50,4 +50,6 @@ ENV CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER="$CROSS_TOOLCHAIN_PREFIX"gcc.
     CROSS_CMAKE_OBJECT_FLAGS="-ffunction-sections -fdata-sections -fPIC" \
     CROSS_BUILTINS_PATCHED_MINOR_VERSION=48
 
+ENV CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_RUSTFLAGS="-C link-args=/usr/local/aarch64-linux-musl/lib/libc.a $CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_RUSTFLAGS"
+
 RUN sed -e "s#@DEFAULT_QEMU_LD_PREFIX@#$QEMU_LD_PREFIX#g" -i /qemu-runner
